--- a/DuAn1_QuanLyQuanTraChanh/nbproject/project.properties
+++ b/DuAn1_QuanLyQuanTraChanh/nbproject/project.properties
@@ -35,6 +35,7 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/DuAn1_QuanLyQuanTraChanh
 endorsed.classpath=
 excludes=
+file.reference.AbsoluteLayout-RELEASE130.jar=D:\\FPT_Polytechnic\\TuHoc\\AbsoluteLayout-RELEASE130.jar
 file.reference.gradient-icon-font.jar=D:\\FPT_Polytechnic\\duan1quanli\\Librarys\\gradient-icon-font.jar
 file.reference.jcalendar-1.4.jar=D:\\FPT_Polytechnic\\duan1quanli\\Librarys\\lib\\jcalendar-1.4.jar
 file.reference.jcommon-1.0.23.jar=D:\\FPT_Polytechnic\\duan1quanli\\Librarys\\jcommon-1.0.23.jar
@@ -52,7 +53,8 @@ javac.classpath=\
     ${file.reference.miglayout-4.0.jar}:\
     ${file.reference.jcalendar-1.4.jar}:\
     ${file.reference.mssql-jdbc-10.2.1.jre17.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.AbsoluteLayout-RELEASE130.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
